@@ -114,10 +114,10 @@ Default HARP configuration file
 .B harp -ts -s -p1,43,SongName,2
 .br
 .RS
-Plays the four selected songs in shuffled order
+Plays the four selected songs in shuffled order.
 .RE
 .br
-.B harp -i ~/music/ -v
+.B harp -v -i ~/music/
 .br
 .RS
 Inserts the songs located under the ~/music/ directory with verbose output.
